# ThePublic

./: BACKEND_CHECKLIST.md  Cargo.toml  README.md  SPRINT-TIMELINE.md  as-pect.config.js  docker-compose.yml  mixpanel.js  package-lock.json  package.json  pnpm-lock.yaml  replit.nix  sentry.js  tailwind.config.js  tailwind.config.ts  tsconfig.base.json  vercel.json  worker.js
app/: globals.css  layout.tsx  page.tsx
backend/: .eslintrc.js  README.md  jest.config.js  package.json  tsconfig.json
backend/solana/programs/node-registry/: Cargo.toml
backend/solana/programs/node-registry/src/: errors.rs  instructions.rs  lib.rs  state.rs
components/: animated-mode-toggle.tsx  animated-section.tsx  color-showcase.tsx  connect-wallet.tsx  connected-devices.tsx  connection-form.tsx  dark-mode-settings.tsx  footer.tsx  header.tsx  hero-section.tsx  how-it-works.tsx  join-network.tsx  language-selector.tsx  mode-toggle.tsx  nearby-nodes.tsx  network-stats.tsx  network-status.tsx  optimized-context-consumer.tsx  progress-settings.tsx  progress-tracker.tsx  progress-widget.tsx  theme-transition.tsx  user-stats.tsx
contexts/: language-context.tsx  notification-context.tsx  progress-context.tsx  solana-wallet-provider.tsx  wallet-modal-context.tsx
data/: blog-posts.ts
docs/: CONTRIBUTION.md  FILESTRUCTURE.md  SYSTEM-DESIGN.md  TAGS-TIMELINE.md  TECH-STACK.md
hooks/: use-local-storage.ts  use-progress-tracker.ts  use-selective-progress.ts  use-theme-transition.ts  use-wallet-history.ts  use-wallet.ts
lib/: animation-variants.ts  context-utils.ts  micro-interactions.ts  (+1 more)
(+322 files in other folders)
